feat: Add user tab to sidebar menu and update Spanish translation
- Added "Ficha de usuario" as a new menu item in the sidebar menu.
- Updated the Spanish translation for the "Inicio" menu item.

Also, updated the port number in the Vite configuration file from 3000 to 5173.

--- a/src/_zeus/i18n/messages/es.json
+++ b/src/_zeus/i18n/messages/es.json
@@ -34,5 +34,6 @@
   "AUTH.VALIDATION.MIN_LENGTH_FIELD": "Minimum field length:",
   "AUTH.VALIDATION.MAX_LENGTH_FIELD": "Maximum field length:",
   "AUTH.VALIDATION.INVALID_FIELD": "Field is not valid",
-  "MENU.DASHBOARD": "Inicio"
+  "MENU.DASHBOARD": "Inicio",
+  "MENU.USER_TAB": "Ficha de usuario"
 }
